Added adaptation to edits, validation of price

--- a/src/app/add-dish/add-dish.component.css
+++ b/src/app/add-dish/add-dish.component.css
@@ -8,6 +8,11 @@ h3 .nameDish {
 	color: rgb(49, 42, 39);
 }
 
+.thumbnail .imgDish {
+	height: 6.25rem;
+	width: 12.5rem;
+} 
+
 div .nameForm {
 	font-weight: bold;
 	color: rgb(49, 42, 39);
