--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 				<li class="logo"><img src={{urlLogo}} alt="image1" /></li>
 			</ul>
 		</div>
-		<div class="top-bar-left">
+		<div class="top-bar-left imgCenter">
 			<ul class="menu">
 				<img src={{nameRestaurant}} alt="image1" />
 			</ul>
@@ -35,31 +35,7 @@
 	</div>
 
 
-	<!-- <nav>
-		<div class="top-bar-left hide-for-small-only">
-			<ul class="menu top-bar-left hide-for-small-only">
-				<li class="logo"><img src={{urlLogo}} alt="image1" /></li>
-			</ul>
-		</div>
-		<div class="top-bar-left">
-			<ul class="menu top-bar-left">
-				<img src={{nameRestaurant}} alt="image1" />
-			</ul>
-		</div>
-
-		<input type="checkbox" name="menu" id="btn-menu" /> <label
-			for="btn-menu"><img src={{urlLogo}} alt="image1" /></label>
-
-		<ul class="top-bar-right">
-			<li><a routerLink="/add-dish" routerLinkActive="active">Add
-					Dish</a></li>
-			<li><a routerLink="/edit-dish" routerLinkActive="active">Edit
-					Dish</a></li>
-			<li><a routerLink="/edit-dish-price" routerLinkActive="active">Edit
-					Price</a></li>
-		</ul>
-	</nav>
- -->
+	
 
 
 
