--- a/src/app/modal-window/modal-window.component.html
+++ b/src/app/modal-window/modal-window.component.html
@@ -30,7 +30,7 @@
 						name="id" [(ngModel)]="dishName.id" placeholder={{dishName.id}} formControlName="id">
 
 
-					<input type="number" class="none" required name="price"
+					<input type="text" class="none" required name="price"
 						[(ngModel)]="dishName.price" placeholder={{dishName.price}} formControlName="price">
 
 
