--- a/src/app/edit-dish/edit-dish.component.html
+++ b/src/app/edit-dish/edit-dish.component.html
@@ -3,34 +3,38 @@
 
 
 
-<div class="row small-up-3 large-up-3 dishes bgDishes">
 
-	<div class="column conteinerDishes" *ngFor="let dish of dishes">
-		<div class="card card-product-hover">
-			<img class="imgDish" src={{dish.imgURL}} alt="picture of dish" /> <img
-				src={{fonDish}} alt="picture of logotip" />
-			<div class="card-product-hover-icons">
-				<div>
-					<button type="button" class="btn btn-md btn-success buttonSize"
-						data-toggle="modal" data-target="#myModal"
-						(click)="modalWindow(dish)">Update</button>
-					<button type="button" class="btn btn-md btn-danger buttonSize"
-						(click)="delete(dish); $event.stopPropagation()">Delete</button>
+<div class="row dishes bgDishes">
+
+	<div class="small-up-1 medium-up-2 large-up-3 ">
+		<div class="column conteinerDishes" *ngFor="let dish of dishes">
+			<div class="card card-product-hover">
+				<img class="imgDish" src={{dish.imgURL}} alt="picture of dish" /> <img
+					src={{fonDish}} alt="picture of logotip" />
+				<div class="card-product-hover-icons">
+					<div>
+						<button type="button" class="btn btn-md btn-success buttonSize"
+							data-toggle="modal" data-target="#myModal"
+							(click)="modalWindow(dish)">Update</button>
+						<button type="button" class="btn btn-md btn-danger buttonSize"
+							(click)="delete(dish); $event.stopPropagation()">Delete</button>
+					</div>
+				</div>
+
+				<div class="card-product-hover-details">
+					<h3 class="card-product-hover-title text-center nameDish">
+						{{dish.name}} <span class="card-product-hover-price text-left">${{dish.price}}</span>
+					</h3>
+					<h5 class="text-center">
+						<i class="fa fa-calendar"></i> {{dish.calendar1}} -
+						{{dish.calendar2}}
+					</h5>
 				</div>
 			</div>
 
-			<div class="card-product-hover-details">
-				<h3 class="card-product-hover-title text-center nameDish">
-					{{dish.name}} <span class="card-product-hover-price text-left">${{dish.price}}</span>
-				</h3>
-				<h5 class="text-center">
-					<i class="fa fa-calendar"></i> {{dish.calendar1}} -
-					{{dish.calendar2}}
-				</h5>
-			</div>
 		</div>
+
 
 	</div>
 
 </div>
-
