--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,13 @@
 	<div class="top-bar">
 
 
-		<div class="top-bar-left hide-for-small-only">
-			<ul class="menu">
+		<div class="top-bar-left">
+			<ul class="menu imgCenter">
 				<li class="logo"><img src={{urlLogo}} alt="image1" /></li>
 			</ul>
 		</div>
-		<div class="top-bar-left imgCenter">
-			<ul class="menu">
+		<div class="top-bar-left">
+			<ul class="menu nameRestaurant">
 				<img src={{nameRestaurant}} alt="image1" />
 			</ul>
 		</div>
