--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -50,22 +50,28 @@ input[type="checkbox"] {
 	.imgCenter img {
 		display: none;
 	}
+	.top-bar{text-align: center;}
+}
+
+@media screen and (max-width: 700px) {
+	.nameRestaurant img {
+		display: none;
+	}
+	.top-bar{text-align: center;}
+}
+
+@media screen and (max-width: 340px) {
 	.top-bar-right label {
 		display: inline-block;
-		text-align: right;
 	}
 	.top-bar-right>.menu {
 		display: none;
 		
 	}
+		input[type="checkbox"]:checked ~ label {
+		position: static;
+	}
 	input[type="checkbox"]:checked ~ label+ul {
 		display: block;
-	}
-
-}
-
-@media screen and (max-width: 350px) {
-	.top-bar {
-		text-align: center;
 	}
 }
