--- a/src/app/edit-dish/edit-dish.component.html
+++ b/src/app/edit-dish/edit-dish.component.html
@@ -1,11 +1,9 @@
 <app-modal-window [dishName]="name" (onChanged)="onChanged($event)"></app-modal-window>
 
-
-
-
-
 <div class="row dishes bgDishes">
-
+<h2 class="addDishImg text-center">
+			<img src={{editDishe}}> 
+		</h2>
 	<div class="small-up-1 medium-up-2 large-up-3 ">
 		<div class="column conteinerDishes" *ngFor="let dish of dishes">
 			<div class="card card-product-hover">
