--- a/src/app/restaurant-footer/restaurant-footer.component.html
+++ b/src/app/restaurant-footer/restaurant-footer.component.html
@@ -1,11 +1,11 @@
 <footer class="marketing-site-footer">
   <div class="row medium-unstack">
     <div class="medium-4 columns">
-      <h4 class="marketing-site-footer-name"><img src={{nameFooter}}></h4>
-      <p class="qmargin">"Primus inter pares"</p>
+      <h4 class="marketing-site-footer-name nameVillula"><img src={{nameFooter}} alt="villula"></h4>
+      <p class="qmargin hideNameVillula">"Primus inter pares"</p>
     </div>
     <div class="medium-4 columns text-center"> 
-       <h4 class="marketing-site-footer-title"><img src={{contactFooter}}></h4>
+       <h4 class="marketing-site-footer-title"><img src={{contactFooter}} alt="villula"></h4>
       <div class="marketing-site-footer-block">
         <i class="fa fa-map-marker" aria-hidden="true"></i>
         <p>1 Central Park West, New York, NY 10023, USA</p>
@@ -24,25 +24,25 @@
       </div>
     </div>
     <div class="medium-4 columns">
-      <h4 class="marketing-site-footer-title text-center"><img src={{atmosphereFooter}}></h4>
-      <div class="row small-up-3">
+      <h4 class="marketing-site-footer-title text-center"><img src={{atmosphereFooter}} alt="villula"></h4>
+      <div class="row medium-up-2 small-up-2 large-up-3">
         <div class="column column-block">
-          <img src={{imgfooter1}} alt="" />
+          <img src={{imgfooter1}} alt="villula" />
         </div>
         <div class="column column-block">
-          <img src={{imgfooter2}} alt="" />
+          <img src={{imgfooter2}} alt="villula" />
         </div>
         <div class="column column-block">
-          <img src={{imgfooter3}} alt="" />
+          <img src={{imgfooter3}} alt="villula" />
         </div>
         <div class="column column-block">
-          <img src={{imgfooter4}} alt="" />
+          <img src={{imgfooter4}} alt="villula" />
         </div>
         <div class="column column-block">
-          <img src={{imgfooter5}} alt="" />
+          <img src={{imgfooter5}} alt="villula" />
         </div>
         <div class="column column-block">
-          <img src={{imgfooter6}} alt="" />
+          <img src={{imgfooter6}} alt="villula" />
         </div>
       </div>
     </div>
