Added static footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,11 +35,9 @@
 	</div>
 
 
-	
+	<main> <router-outlet></router-outlet> </main>
 
-
-
-	<router-outlet></router-outlet>
 
 	<app-restaurant-footer></app-restaurant-footer>
 </body>
+
