--- a/src/app/edit-dish-price/edit-dish-price.component.html
+++ b/src/app/edit-dish-price/edit-dish-price.component.html
@@ -1,12 +1,12 @@
-
+<div class="image" [ngStyle]="{'background-image':'url(' + background.link + ')'}">
 <app-modal-window-price [selectDish]="chooseDish"
 	(onChanged)="onChanged($event)"></app-modal-window-price>
 
 
 <div class="row dishes bgDishes">
-	<h2 class="addDishImg text-center">
+<!-- 	<h2 class="addDishImg text-center">
 		<img src={{editPrice}}>
-	</h2>
+	</h2> -->
 	<div class="small-up-1 medium-up-2 large-up-3 ">
 		<div class="column conteinerDishes" *ngFor="let dish of dishes">
 			<div class="card card-product-hover">
@@ -35,4 +35,5 @@
 
 	</div>
 
+</div>
 </div>
