--- a/src/app/add-dish/add-dish.component.html
+++ b/src/app/add-dish/add-dish.component.html
@@ -1,7 +1,7 @@
 
 <div class="image" [ngStyle]="{'background-image':'url(' + background.link + ')'}">
 <div class="row dishes bgDishes">
-	<div class="medium-6 large-6 columns">
+	<div class="medium-6 large-6 columns margBottImg">
 		<div class="row small-up-2">
 			<div class="column down">
 				<img class="thumbnail" src={{menu}}>
