--- a/src/app/form-add-dish/form-add-dish.component.css
+++ b/src/app/form-add-dish/form-add-dish.component.css
@@ -43,6 +43,8 @@ form .form-icons .fa {
 	width: 1rem;
 }
 
+.upInput {margin-top: -10px;}
+
 .form-icons {
 	margin-top: -25px;
 }
@@ -73,6 +75,6 @@ form .form-icons .fa {
 	font-size: 0.9rem;
 	color: green;
 	text-align: right;
-	margin: 0;
+	margin-right: 17px;
 	padding: 0;
 }
